[package]
name = "todo-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
clap = { version = "4.4.6", features = ["derive"] }
chrono = "0.4.31"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
home = "0.5.5"
ratatui = "0.23.0"
